# scry3

./: .gitignore  Cargo.toml  README.md
crates/scry3/: Cargo.toml
crates/scry3/src/: build.rs  http.rs  indexer.rs  kzip.rs  main.rs  marked_source.rs  nameindex.rs  query.rs  stream.rs  ticket.rs
docs/: AOSP.md  COMPARISON.md  PIPELINE.md  SCALING.md
kythe-patches/: 0001-bump-asm-dep-to-9.7.1.patch  0002-KytheClassVisitor-ASM7-to-ASM9.patch  0003-ClassFileIndexer-default-corpus.patch  0004-CompilationUnitPathFileManager-derive-classpath.patch  README.md
