[workspace]
resolver = "2"
members = [
    "crates/scry3",
]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# scry3 is a thin wrapper around the stock Kythe tools; the heavy lifting
# (serving table, query engine) lives in `write_tables` / `kythe`. There is
# no hot in-process read path, so the aggressive scry2 release profile is
# unnecessary here — a normal optimized build is plenty.
[profile.release]
opt-level = 3
lto = "thin"
